# embodied-arm-learning

./: .gitignore  LEARNING_INDEX.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  WEEK1_CHECKPOINT.md  WEEK2_CHECKPOINT.md  WEEK2_PLAN.md  WEEK3_PLAN.md  day0_notes.md  day0_step_by_step.py  day10_homework.md  day10_notes.md  day10_step_by_step.py  day11_grasp_episode_log.csv  day11_homework.md  day11_notes.md  day11_step_by_step.py  day12_homework.md  day12_notes.md  day12_policy_from_log.pt  day12_step_by_step.py  day13_homework.md  day13_notes.md  day13_step_by_step.py  day14_homework.md  day14_notes.md  day14_step_by_step.py  day15_homework.md  day15_notes.md  day15_step_by_step.py  day16_homework.md  day16_notes.md  day16_step_by_step.py  day17_homework.md  day17_notes.md  day17_step_by_step.py  day18_notes.md  day18_step_by_step.py  day19_notes.md  (+51 more)
assets/mujoco/: arm6_grasp_scene.xml  planar_grasp_scene.xml
configs/: default.yaml
data/: sample_yolo_detections.json
docs/: ARCHITECTURE.md  EXPERIMENTS.md  REAL2SIM2REAL.md
models/: robot_policy.pt  robot_policy_from_csv.pt  robot_policy_harder.pt
scripts/: evaluate_policy.py  generate_synthetic_data.py  run_closed_loop.py  run_mujoco_smoke.py  train_policy.py
src/embodied_arm/: __init__.py  calibration.py  controller.py  dataset.py  domain_randomization.py  evaluate.py  ik.py  mujoco_sim.py  policy.py  rollout.py  sim_env.py  synthetic_data.py  train_bc.py  yolo_adapter.py
